--- a/src/index.html
+++ b/src/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Animation Assignemtn</title>
+    <title>Animation Assignment</title>
 </head>
-<body>
+<body bgcolor="lightblue">
 <noscript>You need to enable JavaScript to run this app.</noscript>
 <div id="root"></div>
 </body>
