--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Animation Assignment</title>
+    <link rel="shortcut icon" href="">
 </head>
 <body bgcolor="lightblue">
 <noscript>You need to enable JavaScript to run this app.</noscript>
